# ESP32camAI-

./: CMakeLists.txt  sdkconfig  sdkconfig.defaults
components/avi_muxer/: CMakeLists.txt  avi_muxer.c  avi_muxer.h
components/bsp/: CMakeLists.txt  bsp_board.c  bsp_btn.c
components/bsp/include/: bsp_board.h  bsp_btn.h
components/device_hal/: CMakeLists.txt  audio_hal.c  audio_hal.h  camera_hal.c  camera_hal.h  fs_hal.c  fs_hal.h  sdcard_hal.c  sdcard_hal.h
components/utils/: CMakeLists.txt  file_transfer.c  file_transfer.h
main/: CMakeLists.txt  app_cli.c  app_cli.h  app_events.c  app_events.h  app_video.c  app_video.h  camera_pins.h  fs_hal_test.c  fs_hal_test2.c  ipc.c  ipc.h  main.c  task_capture.c  task_capture.h  task_writer.c  task_writer.h
test/: app_cli_auto_test.c  app_cli_auto_test.h  app_events_auto_test.c  app_events_auto_test.h  app_video_auto_test.c  app_video_auto_test.h  auto_feature_test.c  auto_feature_test.h  auto_file_test.c  auto_file_test.h  auto_test.c  auto_test.h  boot_autotest.c  boot_autotest.h  sdcard_smoke_test.c  sdcard_smoke_test.h  smoke_test.c  smoke_test.h  task_smoke_test.c  task_smoke_test.h  task_unit_test.c  task_unit_test.h
